fixed the select overflowing overall search div, aka added !important

--- a/front-end/gotnotes/src/components/Mobile/SearchHigherOrder/styles.scss
+++ b/front-end/gotnotes/src/components/Mobile/SearchHigherOrder/styles.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     height: 5%;
+    width: 100%;
 
     .search-container{
         display: flex;
